Fix overlapping content and sidebar

--- a/spins.fedoraproject.org/static/css/spins.fedora.css
+++ b/spins.fedoraproject.org/static/css/spins.fedora.css
@@ -138,8 +138,8 @@
 /* content */
 #content
 {
-	margin: auto auto auto 20px;
-	width: 710px;
+	margin-left: 5px;
+	width: 680px;
 }
 /* end: content */
 
